improve the JMH benchmark to allow unbounded concurrency (not great TBH)